--- a/inscriptions/templates/admin/dashboard.html
+++ b/inscriptions/templates/admin/dashboard.html
@@ -197,6 +197,10 @@ location.href = "choose/";
                         <i class="fa fa-line-chart"></i><br />
                         <label>{% blocktrans %}Statistiques{% endblocktrans %}</a>
                     </a>
+                    <a href="stats/">
+                        <i class="fa fa-line-chart"></i><br />
+                        <label>{% blocktrans %}Comparaisons{% endblocktrans %}</a>
+                    </a>
                     <a href="anomalies/">
                         <i class="fa fa-exclamation-triangle"></i><br />
                         <label>{% blocktrans %}Anomalies{% endblocktrans %}</a>
