--- a/inscriptions/templates/_stripe.html
+++ b/inscriptions/templates/_stripe.html
@@ -1,9 +1,10 @@
 {% load stripe %}
 {% load i18n %}
+{% load sekizai_tags %}
 <script>window.STRIPE_KEY="{{ COURSE.stripe_public|escapejs }}"</script>
 <script src="https://js.stripe.com/v3/"></script>
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#paymentModal" id="stripe-btn">
+<button type="button" class="btn btn-primary" id="stripe-btn">
     Payer par carte{% if instance.reste_a_payer %} {% if not COURSE.frais_stripe_inclus %}{{ instance.reste_a_payer|prix_stripe|floatformat:2 }}{% else %}{{ instance.reste_a_payer }}{% endif %}€{% endif %}
 </button>
 
@@ -74,210 +75,126 @@
     </div>
   </div>
 </div>
+
+{% addtoblock "js" %}
 <script>
 'use strict';
 
-var stripe = Stripe(window.STRIPE_KEY);
 
-function registerElements(elements) {
-  var formClass = '#payment-form';
-  var form = document.querySelector(formClass);
+const stripe = Stripe(window.STRIPE_KEY);
+$('#stripe-btn').click(async () => {
+    try {
+        const response = await fetch('{% url "inscriptions_stripe_paiement" course_uid=COURSE.uid %}?equipe={{ instance.numero }}');
+        const { client_secret: clientSecret } = await response.json();
+        $('#paymentModal').modal('show');
 
-  var error = form.querySelector('.error');
+        const { cardNumber, cardExpiry, cardCvc } = createElements();
 
-  function enableInputs() {
-    Array.prototype.forEach.call(
-      form.querySelectorAll(
-        "input[type='text'], input[type='email'], input[type='tel']"
-      ),
-      function(input) {
-        input.removeAttribute('disabled');
-      }
-    );
-  }
 
-  function disableInputs() {
-    Array.prototype.forEach.call(
-      form.querySelectorAll(
-        "input[type='text'], input[type='email'], input[type='tel']"
-      ),
-      function(input) {
-        input.setAttribute('disabled', 'true');
-      }
-    );
-  }
+        const formClass = '#payment-form';
+        const form = document.querySelector(formClass);
+        form.addEventListener('submit', async function(e) {
+            try {
+                e.preventDefault();
 
-  function triggerBrowserValidation() {
-    // The only way to trigger HTML5 form validation UI is to fake a user submit
-    // event.
-    var submit = document.createElement('input');
-    submit.type = 'submit';
-    submit.style.display = 'none';
-    form.appendChild(submit);
-    submit.click();
-    submit.remove();
-  }
+                form.classList.add('submitting');
 
-  // Listen for errors from each Element, and show error messages in the UI.
-  var savedErrors = {};
-  elements.forEach(function(element, idx) {
-    element.on('change', function(event) {
-      if (event.error) {
-        error.classList.add('visible');
-        savedErrors[idx] = event.error.message;
-        error.innerText = event.error.message;
-      } else {
-        savedErrors[idx] = null;
+                // Disable all inputs.
+                disableInputs();
+                
+                const {paymentIntent, error} = await stripe.handleCardPayment(
+                    clientSecret, cardNumber, {}
+                );
 
-        // Loop over the saved errors and find the first one, if any.
-        var nextError = Object.keys(savedErrors)
-          .sort()
-          .reduce(function(maybeFoundError, key) {
-            return maybeFoundError || savedErrors[key];
-          }, null);
-
-        if (nextError) {
-          // Now that they've fixed the current error, show another one.
-          error.innerText = nextError;
-        } else {
-          // The user fixed the last error; no more errors.
-          error.classList.remove('visible');
-        }
-      }
-    });
-  });
-
-  // Listen on the form's 'submit' handler...
-  form.addEventListener('submit', function(e) {
-    e.preventDefault();
-
-    // Trigger HTML5 validation UI on the form if any of the inputs fail
-    // validation.
-    var plainInputsValid = true;
-    Array.prototype.forEach.call(form.querySelectorAll('input'), function(
-      input
-    ) {
-      if (input.checkValidity && !input.checkValidity()) {
-        plainInputsValid = false;
-        return;
-      }
-    });
-    if (!plainInputsValid) {
-      triggerBrowserValidation();
-      return;
-    }
-
-    // Show a loading screen...
-    form.classList.add('submitting');
-
-    // Disable all inputs.
-    disableInputs();
-
-    // Use Stripe.js to create a token. We only need to pass in one Element
-    // from the Element group in order to create a token. We can also pass
-    // in the additional customer data we collected in our form.
-    stripe.createToken(elements[0], {}).then(function(result) {
-    // Stop loading!
-
-    if (result.token) {
-        // If we received a token, show the token ID.
-        var csrfToken = $("[name=csrfmiddlewaretoken]").val();
-        $.ajax('{% url "inscriptions_stripe_paiement" course_uid=COURSE.uid %}?equipe={{ instance.numero }}', {
-            method: 'POST',
-            data: { 
-                csrfmiddlewaretoken: csrfToken,
-                token: result.token.id,
-            },
-            success: function(r) { 
+                if (error) {
+                    console.log(error);
+                    const errorEl = form.querySelector('.error');
+                    errorEl.classList.add('visible');
+                    errorEl.innerText = error.message;
+                    enableInputs();
+                    form.classList.remove('submitting');
+                } else {
+                    form.classList.add('submitted');
+                    checkPaiement();
+                }
+            } catch (err) {
+                console.error(err);
+                enableInputs();
                 form.classList.remove('submitting');
-                var data = JSON.parse(r);
-                if (!data.success) return alert('Votre carte a été refusée. Veuillez verifiez que vous avez saisi les bonnes informations.');
-
-                $('#stripe-btn').text('Paiement par carte en attente de validation').attr('disabled', true);
-                $('#paymentModal').modal('hide');
-                $('#paymentModal2').modal('show');
-                setInterval(function() {
-                    $.ajax('{% url "inscriptions_equipe_payee" course_uid=COURSE.uid numero=instance.numero %}', {
-                        method: 'GET',
-                        success: function(r) {
-                            var data = JSON.parse(r);
-                            if (data.success) location.reload(true);
-                        }
-                    });
-                }, 5000);
             }
         });
-        form.classList.add('submitted');
-    } else {
-        // Otherwise, un-disable inputs.
-        form.classList.remove('submitting');
-        enableInputs();
+    } catch(err) {
+        console.error(err);
     }
-    });
-  });
+});
+
+function enableInputs() {
+    $("input[type='text'], input[type='email'], input[type='tel']").removeAttr('disabled');
 }
 
-(function() {
-  'use strict';
+function disableInputs() {
+    $("input[type='text'], input[type='email'], input[type='tel']").attr('disabled', true);
+}
 
-  var elements = stripe.elements({
-    fonts: [
-      {
-        cssSrc: 'https://fonts.googleapis.com/css?family=Source+Code+Pro',
-      },
-    ],
-    locale: 'auto',
-  });
+const createElements = () => {
+    'use strict';
 
-  var elementStyles = {
-    base: {
-      color: '#32325D',
-      fontWeight: 500,
-      fontFamily: 'Source Code Pro, Consolas, Menlo, monospace',
-      fontSize: '16px',
-      fontSmoothing: 'antialiased',
+    var elements = stripe.elements({
+        fonts: [{
+            cssSrc: 'https://fonts.googleapis.com/css?family=Source+Code+Pro',
+        }],
+        locale: 'auto',
+    });
 
-      '::placeholder': {
-        color: '#CFD7DF',
-      },
-      ':-webkit-autofill': {
-        color: '#e39f48',
-      },
-    },
-    invalid: {
-      color: '#E25950',
+    const options = {
+        style: {
+            base: {
+                color: '#32325D',
+                fontWeight: 500,
+                fontFamily: 'Source Code Pro, Consolas, Menlo, monospace',
+                fontSize: '16px',
+                fontSmoothing: 'antialiased',
+                '::placeholder': { color: '#CFD7DF' },
+                ':-webkit-autofill': { color: '#e39f48', },
+            },
+            invalid: {
+                color: '#E25950',
+                '::placeholder': { color: '#FFCCA5' },
+            },
+        },
+        classes: {
+            focus: 'focused',
+            empty: 'empty',
+            invalid: 'invalid',
+        },
+    };
 
-      '::placeholder': {
-        color: '#FFCCA5',
-      },
-    },
-  };
+    var cardNumber = elements.create('cardNumber', options);
+    cardNumber.mount('#card-number');
 
-  var elementClasses = {
-    focus: 'focused',
-    empty: 'empty',
-    invalid: 'invalid',
-  };
+    var cardExpiry = elements.create('cardExpiry', options);
+    cardExpiry.mount('#card-expiry');
 
-  var cardNumber = elements.create('cardNumber', {
-    style: elementStyles,
-    classes: elementClasses,
-  });
-  cardNumber.mount('#card-number');
+    var cardCvc = elements.create('cardCvc', options);
+    cardCvc.mount('#card-cvc');
 
-  var cardExpiry = elements.create('cardExpiry', {
-    style: elementStyles,
-    classes: elementClasses,
-  });
-  cardExpiry.mount('#card-expiry');
+    return { cardNumber, cardExpiry, cardCvc }
+};
 
-  var cardCvc = elements.create('cardCvc', {
-    style: elementStyles,
-    classes: elementClasses,
-  });
-  cardCvc.mount('#card-cvc');
+const checkPaiement = () => {
+    var csrfToken = $("[name=csrfmiddlewaretoken]").val();
 
-  registerElements([cardNumber, cardExpiry, cardCvc]);
-})();
+    $('#stripe-btn').text('Paiement par carte en attente de validation').attr('disabled', true);
+    $('#paymentModal').modal('hide');
+    $('#paymentModal2').modal('show');
+    setInterval(async function() {
+        const response = await fetch('{% url "inscriptions_equipe_payee" course_uid=COURSE.uid numero=instance.numero %}');
+        const data = await response.json();
+        if (data.success) {
+            location.reload(true);
+        }
+    }, 5000);
+}
 </script>
+{% endaddtoblock %}
 
