--- a/inscriptions/templates/admin/dashboard.html
+++ b/inscriptions/templates/admin/dashboard.html
@@ -205,6 +205,10 @@ location.href = "choose/";
                         <i class="fa fa-exclamation-triangle"></i><br />
                         <label>{% blocktrans %}Anomalies{% endblocktrans %}</a>
                     </a>
+                    <a href="anniversaires/">
+                        <i class="fa fa-birthday-cake"></i><br />
+                        <label>{% blocktrans %}Anniversaires{% endblocktrans %}</a>
+                    </a>
                     <a href="/wiki/" target="_blank">
                         <i class="fa fa-book"></i><br />
                         <label>{% blocktrans %}Wiki{% endblocktrans %}</a>
