--- a/inscriptions/templates/admin/anniversaires.html
+++ b/inscriptions/templates/admin/anniversaires.html
@@ -24,7 +24,7 @@
     <tr>
         <td>{{ equipier.equipe.numero }}{{ equipier.numero }}</td>
         <td>{{ equipier.nom }} {{ equipier.prenom }}</td>
-        <td>{{ equipier.date_de_naissance }}</td>
+        <td>{{ equipier.date_de_naissance }} ({{ equipier.age }} ans)</td>
         <td><a href="/course/inscriptions/equipe/{{ equipier.equipe.id }}/">{{ equipier.equipe.nom }}</a></td>
         <td>{{ equipier.equipe.categorie.code }}</td>
     </tr>
