--- a/inscriptions/templates/_course_header.html
+++ b/inscriptions/templates/_course_header.html
@@ -6,17 +6,18 @@
             <img src="{{ MEDIA_URL }}{{ COURSE.logo }}" align="left" width="200" class="hidden-xs"/>
         </div>
         <div class="media-body">
-            <h2>{{ COURSE.nom }}</h2>
+            <h2>{% if TITLE %}{{ TITLE }} - {% endif %}{{ COURSE.nom }}</h2>
             <p>
                 {% blocktrans with date=COURSE.date ville=COURSE.ville %}le {{date }} à {{ ville }}{% endblocktrans %}<br />
                 {% blocktrans with organisateur=COURSE.organisateur %}Organisé par {{ organisateur }}.{% endblocktrans %}<br />
             </p>
             <ul class="nav nav-pills">
                 {% if not COURSE.fermee %}
-                <li role="presentation"><a href="{% url "inscriptions_create" course_uid=COURSE.uid %}">{% trans "Inscription" %}</a></li>
+                <li role="presentation"{% if page == "inscription" %} class="active"{% endif %}><a href="{% url "inscriptions_create" course_uid=COURSE.uid %}">{% trans "Inscription" %}</a></li>
                 {% endif %}
                 <li role="presentation"><a href="{{ COURSE.url }}">{% trans "Site de la course" %}</a></li>
                 <li role="presentation"><a href="{{ COURSE.url_reglement }}">{% trans "Règlement" %}</a></li>
+                <li role="presentation"{% if page == "categories" %} class="active"{% endif %}><a href="{% url "categories" course_uid=COURSE.uid %}">{% trans "Catégories et tarifs" %}</a></li>
                 <li role="presentation"{% if page == "list" %} class="active"{% endif %}><a href="{% url "inscriptions_list" course_uid=COURSE.uid %}">{% trans "Liste des inscrits" %}</a></li>
                 <li role="presentation"{% if page == "stats" %} class="active"{% endif %}><a href="{% url "inscriptions_stats" course_uid=COURSE.uid %}">{% trans "Statistiques" %}</a></li>
                 {% if COURSE.fermee %}
@@ -25,6 +26,7 @@
                 {% for challenge in COURSE.challenges.all %}
                 <li role="presentation"><a href="{% url "inscriptions_challenge" challenge_uid=challenge.uid %}">{{ challenge.nom }}</a></li>
                 {% endfor %}
+                <li role="presentation"{% if page == "contact" %} class="active"{% endif %}><a href="{% url "contact" course_uid=COURSE.uid %}">{% trans "Contact" %}</a></li>
             </ul>
         </div>
     </div>
