--- a/inscriptions/templates/categories.html
+++ b/inscriptions/templates/categories.html
@@ -37,7 +37,7 @@
                         {% endif %}<br />
                         {% trans "Sexe :" %} {{ mixite_choices|get:categorie.sexe }}<br />
                         {% blocktrans with age=categorie.min_age %}A partir de {{ age }} ans{% endblocktrans %}<br />
-                        {{ categorie.description }}
+                        {{ categorie.description|default:"" }}
                         </div></div>
                     </div>
                 </td>
