--- a/inscriptions/templates/categories.html
+++ b/inscriptions/templates/categories.html
@@ -11,6 +11,7 @@
         <table class="list_inscrits">
             <tr>
                 <th></th>
+                {% if course.date_augmentation %}
                 <th>
                     {% trans "Tarif réduit" %}<br />
                     {% blocktrans with date=course.dernier_jour_tarif_reduit %}(jusqu'au {{ date }} inclus){% endblocktrans %}
@@ -19,12 +20,19 @@
                     {% trans "Plein tarif" %}<br />
                     {% blocktrans with date=course.dernier_jour_inscription %}(inscriptions jusqu'au {{ date }} inclus){% endblocktrans %}
                 </th>
+                {% else %}
+                <th>
+                    {% trans "Tarif" %}<br />
+                </th>
+                {% endif %}
             </tr>
             {% for categorie in categories %}
             <tr data-toggle="collapse" data-target="#details{{ categorie.id }}" class="accordion-toggle">
                 <td>{{ categorie.nom }} ({{ categorie.code }})</td>
                 <td>{{ categorie.prix1 }} €</td>
+                {% if course.date_augmentation %}
                 <td>{{ categorie.prix2 }} €</td>
+                {% endif %}
             </tr>
             <tr >
                 <td colspan="3" class="hiddenRow">
