--- a/inscriptions/templates/admin/equipe/autre.html
+++ b/inscriptions/templates/admin/equipe/autre.html
@@ -17,7 +17,7 @@
     <div class="field-box">
         <label>Liens de facture</label>
         <div class="readonly">
-            <a href="/{{ instance.course.uid }}/{{ instance.numero }}/facture/">{{ request.scheme }}://{{ request.META.SERVER_NAME }}{% if request.META.SERVER_PORT != 80 and request.META.SERVER_PORT != 443 %}:{{ request.META.SERVER_PORT }}{% endif %}/{{ instance.course.uid }}/{{ instance.numero }}/facture/</a>
+            <a href="/{{ instance.course.uid }}/{{ instance.numero }}/facture/{{ instance.password }}/">{{ request.scheme }}://{{ request.META.SERVER_NAME }}{% if request.META.SERVER_PORT != 80 and request.META.SERVER_PORT != 443 %}:{{ request.META.SERVER_PORT }}{% endif %}/{{ instance.course.uid }}/{{ instance.numero }}/facture/{{ instance.password }}/</a>
         </div>
     </div>
 </div>
